<resources>
    <string name="app_name">HelloPanda</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="basics">Basics</string>
    <string name="animals">Animals</string>
    <string name="nature">Nature</string>
    <string name="food">Food</string>
    <string name="colours">Colours</string>
    <string name="settings_name">Settings</string>
    <string name="signout_name">Sign out</string>
    <string name="learn_icon">Learn</string>
    <string name="test_icon">Test</string>
    <string name="progress_icon">Progress</string>
    <string name="ranking_icon">Ranking</string>
    <string name="button">Next</string>
    <string name="chat">Thank you for signing up! Now it\'s time to choose your Panda.</string>
    <string name="progress_highscore_text">Your highest score is:</string>
    <string name="progress_instructions_text">For every 100 points, find a new addition to your Bamboo Forest!</string>
    <string name="test_instructions_text">You will have 10 seconds to answer each question and a correct answer will score 10 points.</string>
    <string name="test_goodluck_text">好运 (hǎo yùn)! Good Luck!</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="basics_desc">basicsCard</string>
    <string name="animals_desc">animalsCard</string>
    <string name="nature_desc">natureCard</string>
    <string name="food_desc">foodCard</string>
    <string name="colours_desc">coloursCard</string>
</resources>
