<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundCream"
    tools:context=".MainActivity"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711">

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackgroundCream"
                android:layout_alignStart="@+id/login_info"
                android:orientation="vertical"
                android:padding="16dp">


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/editUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arsenal"
                    android:hint="@string/username"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorBackgroundCream"
                    android:textSize="24sp"
                    app:met_baseColor="@android:color/black"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorBackgroundCream"
                    app:met_singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arsenal"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/colorBackgroundCream"
                    android:textSize="24sp"
                    app:met_baseColor="@android:color/black"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/colorBackgroundCream"

                    app:met_singleLineEllipsis="true" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_info"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_sign_in"
                style="@style/Widget.AppCompat.Button.Colored"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryGreen"
                android:fontFamily="@font/arsenal"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryGreen"
                android:fontFamily="@font/arsenal"
                android:text="@string/sign_up"
                android:textColorLink="@color/colorBackgroundCream" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/homeLogo"
        android:layout_width="210dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="logo"
        app:layout_constraintBottom_toTopOf="@+id/homeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862"
        app:srcCompat="@drawable/hellopanda_icon" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryGreen"
        android:textColorLink="@android:color/black"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/chewy" />

</android.support.constraint.ConstraintLayout>