<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="15dp"
                app:srcCompat="@drawable/user" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editNewUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="#fafafa"
                android:fontFamily="@font/arsenal"
                android:hint="@string/username"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryGreen"
                android:textSize="18sp"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimaryDark"
                app:met_singleLineEllipsis="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="15dp"
                app:srcCompat="@drawable/password" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="#fafafa"
                android:fontFamily="@font/arsenal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryGreen"
                android:textSize="18sp"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimaryDark"
                app:met_singleLineEllipsis="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="15dp"
                app:srcCompat="@drawable/email" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editNewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="#fafafa"
                android:fontFamily="@font/arsenal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryGreen"
                android:textSize="18sp"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimaryDark"
                app:met_singleLineEllipsis="true" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
</RelativeLayout>